dnl Process this file with autoconf to produce a configure script.
AC_INIT(README)
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE(liblttemplates, 1.7.0)

dnl Checks for programs
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL

LNT_PROG_DOXYGEN

dnl Checks for libraries
AM_PATH_CPPUNIT(1.8.0,,[
    AC_MSG_WARN([])
    AC_MSG_WARN([CppUnit not found])
    AC_MSG_WARN([Please install CppUnit from http://cppunit.sourceforge.net])
    AC_MSG_WARN([])
    AC_MSG_ERROR([Sorry, I can't continue without CppUnit])
])

LNT_LIB_QT
CHECK_QT_MISC
PKG_CHECK_MODULES(LIBLTTEMPLATES, libltvariables libltvfs)

dnl Checks for header files

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

dnl Miscelaneous Variables
LNT_VAR_TODAY
LNT_VAR_PREFIX
MWOPTTARGETS=""
AC_SUBST(MWOPTTARGETS)

LIBLTTEMPLATES_TOP_SRCDIR="\$(top_srcdir)"
AC_SUBST(LIBLTTEMPLATES_TOP_SRCDIR)

dnl link flags for testcases
TC_LFLAGS="${TC_LFLAGS} -Wl,-rpath,build"
AC_SUBST(TC_LFLAGS)

dnl Output necessary files
AC_OUTPUT([
     Makefile
     liblttemplates.pc
     doc/Makefile
     doc/liblttemplates.dox
     config.h
     config_shared.pri
     config_unix.pri
])

dnl vim: set et tw=0:
